--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "my-parcel-app",
+  "source": "index.html",
+  "scripts": {
+    "dev": "parcel index.html",
+    "build": "parcel build"
+  },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
     "parcel": "^2.12.0",
