--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
   },
   "dependencies": {
     "leaflet": "^1.9.4"
-  }
+  },
+  "version": "1.0.0",
+  "dev": "tailwind.config.js",
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
